# research-JC-oneParameterIsAlwaysEnough

./: README.md  logistic_map.py  pyproject.toml
