[tool.poetry]
name = "research-jc-oneparameterisalwaysenough"
version = "0.1.0"
description = ""
authors = ["gianfa"]
readme = "README.md"
packages = [{include = "research_jc_oneparameterisalwaysenough"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
mpmath = "^1.2.1"
matplotlib = "^3.6.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
